--- a/index.css
+++ b/index.css
@@ -42,8 +42,8 @@ html{
 	font-weight: bold;
 }
 
-.a:hover {
-text-decoration: none;
+a, a:hover, a:focus {
+    text-decoration: none;
 }
 
 header {
