--- a/AboutUs.css
+++ b/AboutUs.css
@@ -50,6 +50,12 @@ header nav {
     justify-content: center;
     align-items: center;
 }
+
+a:hover {
+  text-decoration: none;
+  color: #555555;
+}
+
 header nav a {
     text-decoration: none;
     color: #555555;
