--- a/AboutUs.css
+++ b/AboutUs.css
@@ -5,6 +5,9 @@
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
+h1, h2, h3, h4, h5 {
+	color: #394352;
+}
 body{	
 	margin:0; padding:0;
 }
