--- a/museum.css
+++ b/museum.css
@@ -44,12 +44,13 @@ img.logo{
 
 /*Carousel*/
 #indicators{
-	height: 500px;
+	height: 650px;
 }
 .carousel-item img {
     width: 40%;
     height: 40%;
-    margin-left: 15%;		
+    margin-left: 20%;	
+		margin--top: 20%;
 
 }
 .carousel-item p{	
