--- a/museum.css
+++ b/museum.css
@@ -49,8 +49,8 @@ img.logo{
 .carousel-item img {
     width: 40%;
     height: 40%;
-    margin-left: 20%;	
-		margin--top: 20%;
+    margin-left: 35%;	
+		margin-top: 20%;
 
 }
 .carousel-item p{	
