--- a/museum.css
+++ b/museum.css
@@ -49,7 +49,8 @@ img.logo{
 .carousel-item img {
     width: 40%;
     height: 40%;
-    margin-left: 35%;	
+    margin-left: auto;	
+		margin-left: auto;	
 		margin-top: 20%;
 
 }
