--- a/museum.css
+++ b/museum.css
@@ -50,7 +50,7 @@ img.logo{
     width: 40%;
     height: 40%;
     margin-left: auto;	
-		margin-left: auto;	
+		margin-right: auto;	
 		margin-top: 20%;
 
 }
