--- a/museum.css
+++ b/museum.css
@@ -47,10 +47,9 @@ img.logo{
 /*	height: 650px;*/
 }
 .carousel-item img {
-    width: 40%;
-    height: 40%;
-    margin-left: auto;	
-		margin-right: auto;	
+    width: 70%;
+    height: 70%;
+    margin-left: 20%;			
 		margin-top: 5%;
 
 }
