--- a/museum.css
+++ b/museum.css
@@ -47,8 +47,8 @@ img.logo{
 /*	height: 650px;*/
 }
 .carousel-item img {
-    width: 70%;
-    height: 70%;
+    width: 500px;
+    height: 350px;
     margin-left: 15%;			
 		margin-top: 5%;
 
