--- a/museum.css
+++ b/museum.css
@@ -47,10 +47,10 @@ img.logo{
 /*	height: 650px;*/
 }
 .carousel-item img {
-    width: 500px;
+    /*width: 500px;
     height: 350px;
     margin-left: 15%;			
-		margin-top: 5%;
+    margin-top: 5%;*/
 
 }
 .carousel-item p{	
