--- a/index.css
+++ b/index.css
@@ -27,11 +27,11 @@ html{
 .container{
 	border: 2px solid green;
 	margin: auto;
-	background-color: rgba(102,153,204, 0.4 );	
+	background-color: #f9f6f7;	
 }
 
 #secondRow{
-	background-color: rgba(102,153,204, 0.4 );
+	background-color: #f9f6f7;
 }
 #secondRow h1{
 	margin-left: auto;
