--- a/index.css
+++ b/index.css
@@ -40,7 +40,7 @@ html{
 }
 
 #thirdRow{
-	background-color: rgba(102,153,204, 0.4 );
+	background-color: #f9f6f7;
 }
 #thirdRow img{	
 	height: 50vh; width: 50vh;
@@ -49,7 +49,7 @@ html{
 	margin-left: 35%;
 }
 #fourthRow {
-	background-color: rgba(102,153,204, 0.4 );
+	background-color: #f9f6f7;
 	text-align: center;	
 }
 #fourthRow h1{
