--- a/museum.css
+++ b/museum.css
@@ -69,7 +69,7 @@ img.logo{
 	margin: auto;
 }
 #newRow-ticket_button button a{
-	color: red;
+	color: #020202;
 	padding: 5em;
 	font-size: 20px;
 	font-weight: bold;	
